Tighten and fix Output, CLI ITs (#115)
ANSI is merely a wrapper around existing Output. CLI and Mojo cases do not differ much, and we do want ANSI output from Mojo as well.

Also add CLI ITs as this PR at one point broke CLI.